--- a/package.json
+++ b/package.json
@@ -4,5 +4,6 @@
   "main": "index.js",
   "repository": "https://github.com/binarycodebr/TEClassAPI.git",
   "author": "tiagohintz <tiagohintz@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "description": "TECLass API"
 }
