--- a/package.json
+++ b/package.json
@@ -5,5 +5,18 @@
   "repository": "https://github.com/binarycodebr/TEClassAPI.git",
   "author": "tiagohintz <tiagohintz@gmail.com>",
   "license": "MIT",
-  "description": "TECLass API"
+  "description": "TECLass API",
+  "scripts": {
+    "dev": "nodemon src/server.js"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.6.9"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1",
+    "sucrase": "^3.10.1"
+  }
 }
